v2.0.0: stockfolio.duckdns.org